# Get-Exe-PATH

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  tox.ini
src/get_exe_path/: __init__.py  main.py  utils.py
tests/: test_download_file.py  test_get_os_path.py  test_get_path.py  test_val_file.py
